@@ -205,6 +205,10 @@ reclaim_space(struct lruhash* table, struct lruhash_entry** list)
 		*list = d;
 		lock_rw_wrlock(&d->lock);
 		table->space_used -= table->sizefunc(d->key, d->data);
+		if(table->markdelfunc)
+			/* TODO fptr_wlist it */
+			(*table->markdelfunc)(d->key);
+		lock_rw_unlock(&d->lock);
 		lock_quick_unlock(&bin->lock);
 	}
 }
@@ -341,7 +345,7 @@ lruhash_insert(struct lruhash* table, hashvalue_t hash,
 	while(reclaimlist) {
 		struct lruhash_entry* n = reclaimlist->overflow_next;
 		void* d = reclaimlist->data;
-		(*table->delkeyfunc)(reclaimlist->key, cb_arg, 1);
+		(*table->delkeyfunc)(reclaimlist->key, cb_arg, 0);
 		(*table->deldatafunc)(d, cb_arg);
 		reclaimlist = n;
 	}
@@ -395,10 +399,14 @@ lruhash_remove(struct lruhash* table, hashvalue_t hash, void* key)
 	table->space_used -= (*table->sizefunc)(entry->key, entry->data);
 	lock_quick_unlock(&table->lock);
 	lock_rw_wrlock(&entry->lock);
+	if(table->markdelfunc)
+		/* TODO fptr wlist it */
+		(*table->markdelfunc)(entry->key);
+	lock_rw_unlock(&entry->lock);
 	lock_quick_unlock(&bin->lock);
 	/* finish removal */
 	d = entry->data;
-	(*table->delkeyfunc)(entry->key, table->cb_arg, 1);
+	(*table->delkeyfunc)(entry->key, table->cb_arg, 0);
 	(*table->deldatafunc)(d, table->cb_arg);
 }
 
@@ -414,7 +422,11 @@ bin_clear(struct lruhash* table, struct lruhash_bin* bin)
 		lock_rw_wrlock(&p->lock);
 		np = p->overflow_next;
 		d = p->data;
-		(*table->delkeyfunc)(p->key, table->cb_arg, 1);
+		if(table->markdelfunc)
+			/* TODO fptr wlist it */
+			(*table->markdelfunc)(p->key);
+		lock_rw_unlock(&p->lock);
+		(*table->delkeyfunc)(p->key, table->cb_arg, 0);
 		(*table->deldatafunc)(d, table->cb_arg);
 		p = np;
 	}
@@ -490,4 +502,12 @@ lruhash_get_mem(struct lruhash* table)
 	lock_quick_unlock(&table->lock);
 	s += lock_get_mem(&table->lock);
 	return s;
+}
+
+void 
+lruhash_setmarkdel(struct lruhash* table, lruhash_markdelfunc_t md)
+{
+	lock_quick_lock(&table->lock);
+	table->markdelfunc = md;
+	lock_quick_unlock(&table->lock);
 }
